feat(logger): add logger

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -11,8 +11,8 @@ App:
   LogFileExt: .log
 Database: 
   DBType: mysql
-  Username: root
-  Password: 123456
+  Username: xieli
+  Password: 12345678
   Host: 127.0.0.1:3306
   DBName: blog_service
   TablePrefix: blog_
