--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -27,3 +27,7 @@ Database:
   ParseTime: True
   MaxIdleConns: 10
   MaxOpenConns: 30
+JWT:
+  Secret: xieli
+  Issuser: blog-service
+  Expire: 7200
